Fix select2 css issue to align fields height and margin/padding

--- a/media/css/pydici.css
+++ b/media/css/pydici.css
@@ -269,11 +269,14 @@ div.ui-tooltip {
 /* Fix some select2 CSS issues */
 .select2-selection__clear {
     margin-right: -15px !important;
-    margin-top: -4px !important;
 }
 
+.select2-container--bootstrap .select2-selection--multiple .select2-selection__choice
+{
+    margin: 8px 0 0 6px;
+}
 
-/* Fix solect2 issue in actionset popover */
+/* Fix select2 issue in actionset popover */
 .force_child_span_inline {
     display: inline-block;
     vertical-align: middle;
@@ -282,6 +285,11 @@ div.ui-tooltip {
 .force_child_span_inline > span {
     display: inline-block;
     vertical-align: middle;
+}
+
+/* fix select2 line height */
+.select2-container .select2-selection--single {
+    height: 34px !important;
 }
 
 /* Increase glyphicons size */
